[package]
name = "rpico-led-matrix-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jookwang-park/rpico-led-matrix-rs"

[target.thumbv6m-none-eabi]
runner = "probe-run --chip RP2040"

[dependencies]
rp2040-hal = "0.11.0"
panic-halt = "1.0.0"
embedded-hal = { version = "1.0.0" }
cortex-m = { version = "0.7.2", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
rp2040-boot2 = "0.3.0"
smart-leds = "0.4.0"
ws2812-pio = "0.9.0"
embedded-time = "0.12.1"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
